feat: rebrand to MyTradeDiary and add comprehensive home page
- Rebrand application from "Indian Market Trading Journal" to "MyTradeDiary"
- Update HTML title, package.json descriptions, and navigation branding
- Add comprehensive home page with modern design and features:
  - Hero section with gradient backgrounds and call-to-action
  - Feature showcase with Indian market focus
  - Competitive advantage comparison table
  - Trading psychology section with bento grid layout
  - Testimonials from successful traders
  - Step-by-step how-it-works section
  - Pricing tiers with detailed feature comparison
  - FAQ section with expandable questions
  - Complete footer with links and company info
- Create reusable Logo component with multiple sizes
- Update routing to use /app prefix for authenticated routes
- Improve navigation structure and user experience
- Add extensive Indian market-specific features and benefits
- Implement responsive design with mobile-first approach
- Add motion animations throughout the landing page

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "trading-journal-client",
   "version": "1.0.0",
   "type": "module",
-  "description": "Frontend for Indian Market Trading Journal",
+  "description": "Frontend for MyTradeDiary",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
